--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<ul>
-				<li>&copy; Untitled</li>
+				<li>&copy; Vikrant Biswas</li>
 				<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 			</ul>
 		</div>
