--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,9 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="icon" href="images/favicon.jpg">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Gochi+Hand|Indie+Flower&display=swap" rel="stylesheet">
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
@@ -17,7 +20,7 @@
 
 		<!-- Header -->
 		<header id="header">
-			<a href="index.html" class="logo">Vikrant Biswas</a>
+			<a href="index.html" class="logo">Portfolio</a>
 		</header>
 
 		<!-- Nav -->
@@ -27,10 +30,10 @@
 				<li class="active"><a href="portfolio.html">Portfolio</a></li>
 			</ul>
 			<ul class="icons">
-				<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-				<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-				<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-				<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+				<li><a href="https://www.linkedin.com/in/vikrantbiswas/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+				<li><a href="https://github.com/vik-rants" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+				<li><a href="https://www.instagram.com/biswas_vikrant/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+				<li><a href="https://www.facebook.com/biswasvikrant" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 			</ul>
 		</nav>
 
@@ -38,30 +41,148 @@
 		<div id="main">
 			<div id="hello">
 				<!-- Intro-->
-				<img src="images/worker.png" alt="profilepic">
-				<h2>Hello.</h2>
-				<p>I am a software developer.</p>
+				<img class="hello-img" src="images/potato.png" alt="profilepic">
+				<h2 class="hello-h2">Hello World! I am Vikrant</h2>
+				<p class="hello-p">Software developer who likes bikes and potato</p>
+				<img class="bike-img" src="images/bike.png" alt="profilepic">
+
 			</div>
-			<div id="skills" style="background-color: #80ced6">
+			<div id="skills" >
 				<h2>My Skills.</h2>
 				<div class="skill-row">
-					<img class="skill-img" src="images/worker.png" alt="">
+					<img class="skill-img" src="images/fsdd.png" alt="">
 					<h3>Full stack Development</h3>
-					<p>I am a experienced full stack developer having equal craftmanship in front end as well as back end</p>
+					<p>I am an experienced full stack developer having equal craftmanship in front end as well as back end</p>
 				</div>
 				<div class="skill-row">
-					<img class="skill-img" src="images/worker.png" alt="">
+					<img class="skill-img" src="images/ml.png" alt="">
 					<h3>Machine Learning</h3>
-					<p>I am a experienced full stack developer having equal craftmanship in front end as well as back end</p>
+					<p>I am an experienced Deep Learning enthusiast having experience in computer vision problem solving</p>
 				</div>
 			</div>
 			<div id="work">
 				<!-- Intro-->
-				<p>Hi This is Vikrant</p>
+				<h2>Work experience.</h2>
+				<ul class="timeline">
+					<li>
+						<div class="timeline-badge">
+							<i class="fa fa-circle-o" id=""></i>
+						</div>
+						<div class="timeline-panel">
+							<div class="timeline-heading">
+								<h4>Big Data Consultant</h4>
+							</div>
+							<div class="timeline-body">
+								<p>Capgemini Deutschland.</p>
+							</div>
+							<div class="timeline-footer">
+								<p class="text-right">2020</p>
+							</div>
+						</div>
+					</li>
+
+					<li class="timeline-inverted">
+						<div class="timeline-badge">
+							<i class="fa fa-circle-o invert" id=""></i>
+						</div>
+						<div class="timeline-panel">
+							<div class="timeline-heading">
+								<h4>Intern</h4>
+							</div>
+							<div class="timeline-body">
+								<p>Robert Bosch Gmbh.</p>
+							</div>
+							<div class="timeline-footer">
+								<p class="text-right">March-2019</p>
+							</div>
+						</div>
+					</li>
+
+					<li>
+						<div class="timeline-badge">
+							<i class="fa fa-circle-o" id=""></i>
+						</div>
+						<div class="timeline-panel">
+							<div class="timeline-heading">
+								<h4>Research Assistant</h4>
+							</div>
+							<div class="timeline-body">
+								<p>Fraunhofer.</p>
+							</div>
+							<div class="timeline-footer">
+								<p class="text-right">Feb-23-2018</p>
+							</div>
+						</div>
+					</li>
+
+					<li class="timeline-inverted">
+						<div class="timeline-badge">
+							<i class="fa fa-circle-o invert" id=""></i>
+						</div>
+						<div class="timeline-panel">
+							<div class="timeline-heading">
+								<h4>Amdocs</h4>
+							</div>
+							<div class="timeline-body">
+								<p>Software developer.</p>
+							</div>
+							<div class="timeline-footer">
+								<p class="text-right">Feb-27-2014</p>
+							</div>
+						</div>
+					</li>
+
+					<li>
+						<div class="timeline-badge">
+							<i class="fa fa-circle-o" id=""></i>
+						</div>
+						<div class="timeline-panel">
+							<div class="timeline-heading">
+								<h4>Timeline Event</h4>
+							</div>
+							<div class="timeline-body">
+								<p>Adf.</p>
+							</div>
+							<div class="timeline-footer">
+								<p class="text-right">Mar-01-2014</p>
+							</div>
+						</div>
+					</li>
+
+					<li class="timeline-inverted">
+						<div class="timeline-badge">
+							<i class="fa fa-circle-o invert" id=""></i>
+						</div>
+						<div class="timeline-panel">
+							<div class="timeline-heading">
+								<h4>Timeline Event</h4>
+							</div>
+							<div class="timeline-body">
+								<p>Creref</p>
+							</div>
+							<div class="timeline-footer primary">
+								<p class="text-right">Mar-02-2014</p>
+							</div>
+						</div>
+					</li>
+					<li class="clearfix no-float"></li>
+				</ul>
+
 			</div>
-			<div id="hob" style="background-color: #618685">
+			<div id="hob">
 				<!-- Intro-->
-				<p>Hi This is Vikrant</p>
+				<h2>Hobbies</h2>
+				<div class="skill-row">
+					<img class="skill-img" src="images/fsdd.png" alt="">
+					<h3>Full stack Development</h3>
+					<p>I am an experienced full stack developer having equal craftmanship in front end as well as back end</p>
+				</div>
+				<div class="skill-row">
+					<img class="skill-img" src="images/ml.png" alt="">
+					<h3>Machine Learning</h3>
+					<p>I am an experienced Deep Learning enthusiast having experience in computer vision problem solving</p>
+				</div>
+
 			</div>
 
 		</div>
@@ -70,7 +191,7 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<section>
-				<form method="post" action="#">
+				<form method="post" action="mailto:vikrant.biswas.de@gmail.com" enctype="text/plain">
 					<div class="fields">
 						<div class="field">
 							<label for="name">Name</label>
@@ -93,8 +214,8 @@
 			<section class="split contact">
 				<section class="alt">
 					<h3>Address</h3>
-					<p>1234 Somewhere Road #87257<br />
-						Nashville, TN 00000-0000</p>
+					<p>Wacholderweg #70597<br />
+						Stuttgart, DE 00000-0000</p>
 				</section>
 				<section>
 					<h3>Phone</h3>
@@ -102,15 +223,15 @@
 				</section>
 				<section>
 					<h3>Email</h3>
-					<p><a href="#">info@untitled.tld</a></p>
+					<p><a href="#">vikrant.biswas.de@gmail.com</a></p>
 				</section>
 				<section>
 					<h3>Social</h3>
 					<ul class="icons alt">
-						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="https://www.linkedin.com/in/vikrantbiswas/" class="icon brands alt fa-linkedin"><span class="label">Twitter</span></a></li>
+						<li><a href="https://github.com/vik-rants" class="icon brands alt fa-github"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/biswas_vikrant/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.facebook.com/biswasvikrant" class="icon brands alt fa-facebook-f"><span class="label">GitHub</span></a></li>
 					</ul>
 				</section>
 			</section>
@@ -119,8 +240,8 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<ul>
-				<li>&copy; Untitled</li>
-				<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+				<li>&copy; Vikrant Biswas</li>
+				<!--<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>-->
 			</ul>
 		</div>
 
