--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
 				<li><a href="portfolio.html">Portfolio</a></li>
 			</ul>
 			<ul class="icons">
-				<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-				<li><a href="https://www.facebook.com/biswasvikrant" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-				<li><a href="https://www.instagram.com/biswas_vikrant/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+				<li><a href="https://www.linkedin.com/in/vikrantbiswas/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 				<li><a href="https://github.com/vik-rants" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+				<li><a href="https://www.instagram.com/biswas_vikrant/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+				<li><a href="https://www.facebook.com/biswasvikrant" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+
 			</ul>
 		</nav>
 
@@ -158,7 +159,7 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<section>
-				<form method="post" action="#">
+				<form method="post" action="mailto:vikrant.biswas.de@gmail.com" enctype="text/plain">
 					<div class="fields">
 						<div class="field">
 							<label for="name">Name</label>
@@ -181,8 +182,8 @@
 			<section class="split contact">
 				<section class="alt">
 					<h3>Address</h3>
-					<p>1234 Somewhere Road #87257<br />
-						Nashville, TN 00000-0000</p>
+					<p>Wacholderweg #70597<br />
+						Stuttgart, DE 00000-0000</p>
 				</section>
 				<section>
 					<h3>Phone</h3>
@@ -190,15 +191,15 @@
 				</section>
 				<section>
 					<h3>Email</h3>
-					<p><a href="#">info@untitled.tld</a></p>
+					<p><a href="#">vikrant.biswas.de@gmail.com</a></p>
 				</section>
 				<section>
 					<h3>Social</h3>
 					<ul class="icons alt">
-						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="https://www.linkedin.com/in/vikrantbiswas/" class="icon brands alt fa-linkedin"><span class="label">Twitter</span></a></li>
+						<li><a href="https://github.com/vik-rants" class="icon brands alt fa-github"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/biswas_vikrant/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.facebook.com/biswasvikrant" class="icon brands alt fa-facebook-f"><span class="label">GitHub</span></a></li>
 					</ul>
 				</section>
 			</section>
@@ -208,7 +209,7 @@
 		<div id="copyright">
 			<ul>
 				<li>&copy; Vikrant Biswas</li>
-				<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+				<!--<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>-->
 			</ul>
 		</div>
 
